<resources>

    <!-- Application Strings -->
    <string name="app_name">MoodSpaces</string>

    <!--
    	To keep the strings manageable, their identifiers follow a pattern
    		<activity name>_<type>_<object identifier>_<attribute>
    	
    	One exception is the activity title, which is unique in every activity.
   		 	<activity name>_activity_title
    -->

    <!-- MoodSpaces Activity (Home Screen) Strings -->
    <string name="moodspaces_activity_title">MoodSpaces</string>
    <string name="moodspaces_text_stats_text">Stats</string>
    <string name="moodspaces_button_moodspots_text">MoodSpots</string>
    <string name="moodspaces_button_moodpeeps_text">MoodPeeps</string>
    <string name="moodspaces_button_moodtimes_text">MoodTimes</string>
    <string name="moodspaces_button_moodtasks_text">MoodTasks</string>

    <!-- Input Activity Strings -->
    <string name="input_activity_title">Enter Mood</string>
    <string name="input_spinner_activity_prompt">Select an activity</string>
    <string name="input_spinner_location_prompt">Select a location</string>
    <string name="input_button_location_description">Add Location</string>
    <string name="input_button_people_description">Add Activity</string>
    <string name="input_button_activity_description">Add Activity</string>

    <!-- MoodSpots Activity Strings -->
    <string name="moodspots_activity_title">MoodSpots</string>

    <!-- MoodSpaces Activity Strings -->
    <string name="moodpeeps_activity_title">MoodPeeps</string>

    <!-- MoodTimes Activity Strings -->
    <string name="moodtimes_activity_title">MoodTimes</string>

    <!-- MoodTasks Activity Strings -->
    <string name="moodtasks_activity_title">MoodTasks</string>

    <!-- Settings Activity Strings -->
    <string name="settings_activity_title">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_input">Add</string>
    <string name="button_input">Add Mood Entry!</string>

    <!-- Location Dialog Strings -->
    <string name="dialog_location_title">Create New Location</string>
    <string name="dialog_location_input_hint">Location name</string>
    <string name="dialog_location_button_positive">Create Location</string>
    <string name="dialog_location_button_negative">Cancel</string>

    <!-- People Dialog Strings -->
    <string name="dialog_people_title">Who are you with?</string>
    <string name="dialog_people_button_positive">OK</string>
    <string name="dialog_people_button_negative">Cancel</string>

    <!-- Activity Dialog Strings -->
    <string name="dialog_activity_title">Create New Activity</string>
    <string name="dialog_activity_input_hint">Activity name</string>
    <string name="dialog_activity_button_positive">Create Activity</string>
    <string name="dialog_activity_button_negative">Cancel</string>
    
    <!-- Emotions -->
    <string-array name="emotions">
        <item>Anger</item>
        <item>Anticipation</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Joy</item>
        <item>Sadness</item>
        <item>Surprise</item>
        <item>Trust</item>
    </string-array>
</resources>