<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="5dp" >
    
    <TextView
        android:id="@+id/text_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/moodspaces_text_stats_text"
        android:textSize="16sp"
        android:paddingBottom="10dp"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/button_moodspots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_stats"
        android:text="@string/moodspaces_button_moodspots_text" />

    <Button
        android:id="@+id/button_moodpeeps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_moodspots"
        android:text="@string/moodspaces_button_moodpeeps_text"  />

    <Button
        android:id="@+id/button_moodtimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_moodpeeps"
        android:text="@string/moodspaces_button_moodtimes_text" />

    <Button
        android:id="@+id/button_moodtasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_moodtimes"
        android:text="@string/moodspaces_button_moodtasks_text"
        android:enabled="false" />

</RelativeLayout>